--- a/css/Home.css
+++ b/css/Home.css
@@ -17,7 +17,7 @@
     margin-left:535px;
     width:350px;
     height:260px;
-    background-color:aquamarine;
+    /* background-color:aquamarine; */
 }
 #open-time{
     position:relative;
