--- a/css/Contact.css
+++ b/css/Contact.css
@@ -1,7 +1,7 @@
 #contact {
     width:1180px;
     height:550px;
-    background-color:beige;
+    background-color:#f2f2f2;
     margin:0 auto;
 }
 #kakao{
@@ -10,22 +10,22 @@
     top:25px;
     width:500px;
     height:500px;
-    background-color: coral;
+    /* background-color: coral; */
 }
 #add{
     position:relative;
     left: 550px;
     bottom:400px;
-    width:500px;
+    width:530px;
     height:30px;
-    background-color: aqua;
+    /* background-color: aqua; */
     font-size: large;
     font-weight: bold;
 }
 #add-up{
     position:relative;
-    top:30px;
-    width:600px;
+    top:25px;
+    width:630px;
     height:100px;
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
 }
